Added past sensor data as JSON
